--- a/src/App/global.scss
+++ b/src/App/global.scss
@@ -1,5 +1,51 @@
 * {
   box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  max-width: 1920px;
 
   font-family: Merriweather, serif;
+
+  background-color: #f6f3f3;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  line-height: inherit;
+  text-decoration: none;
+}
+
+button {
+  font-family: inherit;
+}
+
+img {
+  max-width: 100%;
+}
+
+input {
+  font-family: inherit;
+
+  outline: 0;
 }
