Update global properties

--- a/src/App/global.scss
+++ b/src/App/global.scss
@@ -6,11 +6,14 @@ body {
   width: 100%;
   max-width: 1920px;
 
+  color: #343030;
+
   font-family: Merriweather, serif;
 
   background-color: #f6f3f3;
 }
 
+p,
 h1,
 h2,
 h3,
