--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,4 +1,13 @@
 .container {
-  max-width: 1216px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 1216px;
   margin: 0 auto;
+}
+
+@media (max-width: 1300px) {
+  .container {
+    padding: 0 30px;
+  }
 }
