--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -3,15 +3,12 @@ button {
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
+  text-align: center;
 
   background: #403432;
   border: 0;
 
   &:hover {
     background: #776763;
-  }
-
-  &:disabled {
-    background: #c1b4b1;
   }
 }
