--- a/src/components/PaintingsList/PaintingsList.module.scss
+++ b/src/components/PaintingsList/PaintingsList.module.scss
@@ -10,7 +10,8 @@ h1 {
 }
 
 .paintings_wrapper {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px;
   margin-top: 39px;
 }
